# Symbolic-rocket-mechanics-lab

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini
docs/: Overview_EN.md
notebooks/: 01_vertical_rocket_symbolic.ipynb  02_vertical_rocket_numeric.ipynb
src/symrock/: __init__.py  integrators.py  plots.py  rocket_1d.py
tests/: test_rocket_equations.py
